Revert "Allows sponsor boxes to grow in width to avoid wrapping."
This reverts commit ff36ac676dd5032cbd9b3399639e11c73aeb02d1.

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -8,7 +8,7 @@
 
 .container {
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 940px;
   padding: 2em 0;
   width: 90%;
 }
